Start ComboTable selector branch

--- a/lib/CallBackery/qooxdoo/callbackery/config.json
+++ b/lib/CallBackery/qooxdoo/callbackery/config.json
@@ -22,6 +22,9 @@
                 },
                 {
                     "manifest"   : "${CALLBACKERY_PATH}/uploadwidget/Manifest.json"
+                },
+                {
+                    "manifest"   : "${CALLBACKERY_PATH}/combotable/Manifest.json"
                 }
             ]
         },
